...
    "description": "Title of the dialog when the users current session is invalid/expired"
  },
  "pleaseLoginAgain": "Please login again",
  "loggingOut": "Logging out...",
  "timeBasedKeyType": "Time based (TOTP)",
  "counterBasedKeyType": "Counter based (HOTP)",
  "saveAction": "Save",
  "nextTotpTitle": "next",
  "deleteCodeTitle": "Delete code?",
  "deleteCodeMessage": "Are you sure you want to delete this code? This action is irreversible.",
  "trashCode": "Trash code?",
  "trashCodeMessage": "Are you sure you want to trash code for {account}?",
  "trash": "Trash",
...
  "search": "Search",
  "sorryUnableToGenCode": "Sorry, unable to generate a code for {issuerName}",
  "noResult": "No result",
  "addCode": "Add code",
  "scanAQrCode": "Scan a QR code",
  "enterDetailsManually": "Enter details manually",
  "edit": "Edit",
  "share": "Share",
  "shareCodes": "Share codes",
  "shareCodesDuration": "Select the duration for which you want to share codes.",
  "restore": "Restore",
  "copiedToClipboard": "Copied to clipboard",
  "copiedNextToClipboard": "Copied next code to clipboard",
...
  "doThisLater": "Do this later",
  "saveKey": "Save key",
  "save": "Save",
  "send": "Send",
  "saveOrSendDescription": "Do you want to save this to your storage (Downloads folder by default) or send it to other apps?",
  "saveOnlyDescription": "Do you want to save this to your storage (Downloads folder by default)?",
  "back": "Back",
  "createAccount": "Create account",
  "passwordStrength": "Password strength: {passwordStrengthValue}",
  "@passwordStrength": {
    "description": "Text to indicate the password strength",
    "placeholders": {
      "passwordStrengthValue": {
...
  "backupPasswordCleared": "Backup password cleared",
  "enableBackupsIosInstruction": "To enable backups on iOS, choose a folder in Files (for example \"On My iPhone\").",
  "currentBackupFolder": "Current backup folder:",
  "selectFolder": "Select folder",
  "selectFolderToContinue": "Select a folder to continue",
  "iosOnMyDeviceNotSupported": "\"On My iPhone\" cannot be used directly. Please select or create a folder inside it.",
  "done": "Done",
  "addNew": "Add new",
  "selected": "selected",
  "moveMultipleToTrashMessage": "Are you sure you want to move {count} item(s) to the trash?",
  "nSelected": "{count, plural, one {{count} selected} other{{count} selected}}",
  "@nSelected": {
    "description": "Text to indicate number of items selected",
...
